--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@b9g/crank": "^0.7.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
