--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@b9g/crank": "^0.7.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@b9g/crank": "^0.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
